[gd_scene load_steps=11 format=4 uid="uid://ccpln0dmc3ctd"]

[ext_resource type="Script" uid="uid://d3uvh5tyqn6ff" path="res://scripts/LockedDoor.gd" id="1_t2q86"]
[ext_resource type="Material" uid="uid://5x04q6yr1xdo" path="res://textures/world/metal2.tres" id="2_r37dj"]
[ext_resource type="Material" uid="uid://bo4vex1yqkxj8" path="res://textures/world/wood1.tres" id="3_xr2ep"]
[ext_resource type="Material" uid="uid://be72m4lgpp0pn" path="res://textures/world/rivets_h.tres" id="4_bsxro"]

[sub_resource type="ArrayMesh" id="ArrayMesh_t0exp"]
_surfaces = [{
"aabb": AABB(-0.17681193, -0.2210083, -0.0625, 0.35362387, 0.4420166, 0.125),
"attribute_data": PackedByteArray("s/ACP3RaND/GoNg+xPpKP2Zhqz4SWzQ/s/ACPxIbBz8AAAAA1k5HvgAAAACbmOO+AAAAPpuY474AAAA+1k5HvmTYqj/Oe609ZNiqP2QIJb2817o/ZAglvbzXuj/Oe609AAAAABgGAD8AAAA+GAYAPwAAAD6Q/x8/AAAAAJD/Hz8AAACzw5FXPwIAAL7DkVc/AgAAvmFSKj8AAACzYVIqP7jwAr8LGwc/cmGrvgxbND/SoNi+vPpKP7rwAr9sWjQ/MqDYPgr7Sj/kQnw+DPtKP+SyIT4MVzQ/5LIhPqgXBz8AAMCzg1AKP/b//z2DUAo/9P//PWGONz8AAMCzYY43PwDWmj/Oe609ANaaP2gIJb1k2Ko/ZAglvWTYqj/Oe609nq6UP2gyzj6erpQ/aDKOPk5Qqz9oMo4+TlCrP2gyzj4AAMCzK66FPwAAALSvr7U/CQAAvq+vtT8HAAC+K66FP9CyIb6pFwc/0LIhvgxXND/QQny+DPtKPyig2L4M+0o/tDx8Pn+5HT/ksiE+CxcHP+SyIT7mr7M+uPACP+avsz4AAICznB66Pvj//z2cHro+9v//PWZOCj8AAMCzZk4KP3DWij/Oe609cNaKP2gIJb2815o/ZAglvbzXmj/Oe609AACAs9qssz4AAMCzbVo0PwYAAL5tWjQ/BAAAvtqssz4AAAAAjvX/PgAAAD6O9f8+AAAAPjACYD8AAAAAMAJgP7TwAr/qr7M+0LIhvuqvsz7QsiG+DRcHP6A8fL6BuR0/uvACPzIZBz+ap9g+HrYdP3Jhqz4LEwc/uPACPxamsz4AAAAAVpqjvgAAADNqyxG/AQAAPmrLEb/+//89VpqjvtTYmj/Oe6091NiaP2QIJb2916o/ZAglvb3Xqj/Oe609AAAAAJD/Hz8AAAA+kP8fPwAAAD6w/j8/AAAAALD+Pz8AAICzjVAqPwMAAL6NUCo/AgAAvsok+j4AAACzyiT6PrnwAr8aprM+cmGrvg0TBz+ap9i+ILYdP7nwAr80GQc/"),
"format": 34359742487,
"index_count": 144,
"index_data": PackedByteArray("AAABAAIAAAACAAMABAAFAAYABAAGAAcACAAJAAoACAAKAAsADAANAA4ADAAOAA8AEAARABIAEAASABMAFAAVABYAFAAWABcAGAAZABoAGAAaABsAHAAdAB4AHAAeAB8AIAAhACIAIAAiACMAJAAlACYAJAAmACcAKAApACoAKAAqACsALAAtAC4ALAAuAC8AMAAxADIAMAAyADMANAA1ADYANAA2ADcAOAA5ADoAOAA6ADsAPAA9AD4APAA+AD8AQABBAEIAQABCAEMARABFAEYARABGAEcASABJAEoASABKAEsATABNAE4ATABOAE8AUABRAFIAUABSAFMAVABVAFYAVABWAFcAWABZAFoAWABaAFsAXABdAF4AXABeAF8A"),
"material": ExtResource("2_r37dj"),
"name": "world/metal2",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 96,
"vertex_data": PackedByteArray("0AE1PojNBz4AAIC9IAG1PchOYj4AAIC9AADoNgDQBz4AAIC90AE1PgDANL0AAIC9AICOOADABz4AAIA90AE1PgDANL0AAIA90AE1PgDANL0AAIC9AICOOADABz4AAIC9AADoNgDQBz4AAIA9AADoNgDQBz4AAIC9IAG1PchOYj4AAIC9IAG1PchOYj4AAIA9oCO1PQBAYj4AAIA9oCO1PQBAYj4AAIC90AE1PgDQBz4AAIC90AE1PgDQBz4AAIA90AE1PojNBz4AAIA90AE1PojNBz4AAIC90AE1PgDANL0AAIC90AE1PgDANL0AAIA90AE1PgDANL0AAIA9AADoNgDQBz4AAIA9IAG1PchOYj4AAIA90AE1PojNBz4AAIA9oP60PQBQYj4AAIC9YPy0vQBQYj4AAIC9MA41vgDABz4AAIC9MA41vjD2NL0AAIC9GAg1vuDdNL0AAIA9GAg1vuDdNL0AAIC9GAg1vgDABz4AAIC9GAg1vgDABz4AAIA9MA41vgDABz4AAIA9MA41vgDABz4AAIC9YPy0vQBQYj4AAIC9YPy0vQBQYj4AAIA9YBy1vQBQYj4AAIA9YBy1vQBQYj4AAIC9oP60PQBQYj4AAIC9oP60PQBQYj4AAIA9MA41vgAANb0AAIA9kAO1PQBQYj4AAIA9kAO1PQBQYj4AAIC9MA41vgAANb0AAIC9MA41vjD2NL0AAIA9MA41vgDABz4AAIA9YPy0vQBQYj4AAIA9oP60PQBQYj4AAIA9wAi1vUAnNT0AAIC9MA41vgAANb0AAIC9MA41vmA8Yr4AAIC90AE1PmA8Yr4AAIC9GAg1vmA8Yr4AAIA9GAg1vmA8Yr4AAIC9GAg1vgAANb0AAIC9GAg1vgAANb0AAIA9MA41vgAANb0AAIA9MA41vgAANb0AAIC9yAi1vUAnNT0AAIC9yAi1vUAnNT0AAIA9MA41vmA8Yr4AAIA90AE1PmA8Yr4AAIA90AE1PmA8Yr4AAIC9MA41vmA8Yr4AAIC9YBy1vQCANT0AAIA9YBy1vQCANT0AAIC9MA41PmA8Yr4AAIC9MA41PmA8Yr4AAIA90AE1PmA8Yr4AAIA9MA41vmA8Yr4AAIA9MA41vgAANb0AAIA9wAi1vUAnNT0AAIA90AE1PpDdNL0AAIC9QBy1PTDxND0AAIC9AADoNgBANb0AAIC90AE1PgBQYr4AAIC9AADoNgDANL0AAIA90AE1PgAwYr4AAIA90AE1PgAwYr4AAIC9AADoNgDANL0AAIC9AADoNgDANL0AAIA9AADoNgDANL0AAIC9QPy0PTAxNT0AAIC9QPy0PTAxNT0AAIA9oAO1PQBANT0AAIA9oAO1PQBANT0AAIC90AE1PgDANL0AAIC90AE1PgDANL0AAIA90AE1PoDdNL0AAIA90AE1PoDdNL0AAIC90AE1PgAwYr4AAIC90AE1PgAwYr4AAIA90AE1PgBQYr4AAIA9AADoNgBANb0AAIA9QBy1PTDxND0AAIA90AE1PpDdNL0AAIA9//////7//7///////v//v//////+//+///////7//7//P/8///8AgP8//z///wCA/z//P///AID/P/8///8AgP8//7//v//f/z//v/+//9//P/+//7//3/8//7//v//f/7//v///AID/v/+///8AgP+//7///wCA/7//v///AID///9//3//v////3//f/+/////f/9//7////9//3//v/9//38AAP+//3//fwAA/7//f/9/AAD/v/9//38AAP+///////7//7///////v//v//////+//+///////7//78AAP9/AAAAgAAA/38AAACAAAD/fwAAAIAAAP9/AAAAgP8//7//v//f/z//v/+//9//P/+//7//3/8//7//v//f/3///////7//f///////v/9///////+//3///////7//v/8//3//v/+//z//f/+//7//P/9//7//v/8//3//v/9//38AAP+//3//fwAA/7//f/9/AAD/v/9//38AAP+///////7//7///////v//v//////+//+///////7//78AAP9/AAAAgAAA/38AAACAAAD/fwAAAIAAAP9/AAAAgP8//7//v//f/z//v/+//9//P/+//7//3/8//7//v//f/38AAP9//7//fwAA/3//v/9/AAD/f/+//38AAP9//7//v/+///////+//7///////7//v///////v/+///////9//38AAP+//3//fwAA/7//f/9/AAD/v/9//38AAP+///////7//7///////v//v//////+//+///////7//7//P/8///8AgP8//z///wCA/z//P///AID/P/8///8AgP8//7//v//f/z//v/+//9//P/+//7//3/8//7//v//f/7//v///////v/+///////+//7///////7//v/////////9//3//v////3//f/+/////f/9//7////9//3//v/9//38AAP+//3//fwAA/7//f/9/AAD/v/9//38AAP+/")
}]

[sub_resource type="ArrayMesh" id="ArrayMesh_jeyh0"]
_surfaces = [{
"aabb": AABB(-0.0625, -0.125, -0.25003052, 0.125, 0.25, 0.50006104),
"attribute_data": PackedByteArray("AABgvwAAoL8AAEC/AACgvwAAQL8AAIC/AABgvwAAgL8AAAA+AACAvwAIwL4AAIC/AAjAvgAAoL8AAAA+AACgvwAAAL4AAEC/AAAAvgAAYL8ACMA+AABgvwAIwD4AAEC/AAAAPgAAQL8ACMC+AABAvwAIwL4AAGC/AAAAPgAAYL8AAAC+AACgvwAIwD4AAKC/AAjAPgAAgL8AAAC+AACAvwAAYD8AAIC/AABAPwAAgL8AAEA/AACgvwAAYD8AAKC/"),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAACAAMABAAFAAYABAAGAAcACAAJAAoACAAKAAsADAANAA4ADAAOAA8AEAARABIAEAASABMAFAAVABYAFAAWABcA"),
"material": ExtResource("2_r37dj"),
"name": "world/metal2",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AACAPQAAAD4A+H++AACAvQAAAD4A+H++AACAvQAAAL4A+H++AACAPQAAAL4A+H++AACAvQAAAL4ABIA+AACAvQAAAL4ABIC+AACAvQAAAD4ABIC+AACAvQAAAD4ABIA+AACAvQAAAL4ABIA+AACAPQAAAL4ABIA+AACAPQAAAL4ABIC+AACAvQAAAL4ABIC+AACAvQAAAD4ABIA+AACAvQAAAD4ABIC+AACAPQAAAD4ABIC+AACAPQAAAD4ABIA+AACAPQAAAD4ABIA+AACAPQAAAD4ABIC+AACAPQAAAL4ABIC+AACAPQAAAL4ABIA+AACAPQAAAL4ABIA+AACAvQAAAL4ABIA+AACAvQAAAD4ABIA+AACAPQAAAD4ABIA+/////wAA/7//////AAD/v/////8AAP+//////wAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//////////3//////////f/////////9///////9//3////+//3//f////7//f/9/////v/9//3////+/")
}]

[sub_resource type="ArrayMesh" id="ArrayMesh_62h67"]
_surfaces = [{
"aabb": AABB(-0.5, -1, -0.125, 1, 2, 0.25),
"attribute_data": PackedByteArray("AACAvwAA0L8AAAAAAADQvwAAAAAAAMC+AACAvwAAwL4AAAAAAADAvgAAgL4AAMC+AACAvgAA0L8AAAAAAADQvwAAAAAAAAAAAAAAAAAAgL8AAIA+AACAvwAAgD4AAAAAAAAAAAAAAAAAAIC+AAAAAAAAgL4AAIC/AAAAAAAAgL8AAAAAAADQvwAAgD4AANC/AACAPgAAwL4AAAAAAADAvgAAgD8AAMC+AAAAAAAAwL4AAAAAAADQvwAAgD8AANC////fvwEAgD///9+/XAGwM///z7+JRaQz///PvwEAgD8AAAAAAABQvwAAgL4AAFC/AACAvgAAcL8AAAAAAABwvwAAAAAAAAAAAAAAAAAAgL8AAIA+AACAvwAAgD4AAAAAAAAAAAAAAAAAAIC+AAAAAAAAgL4AAIC/AAAAAAAAgL8AAAAAAADCvwAAgD4AAMK/AACAPgAAsr8AAAAAAACyvwEA0L///3+/AQDQv4lFpDMBAOC/XAGwMwEA4L///3+/AACAvwAA+L8AAAAAAAD4vwAAAAAAAOi/AACAvwAA6L8AAAAAAADwvwAAgL4AAPC/AACAvgAAAMAAAAAAAAAAwAAAAAAAAAAAAAAAAAAAgL8AAIA+AACAvwAAgD4AAAAAAAAAAAAAAAAAAIC+AAAAAAAAgL4AAIC/AAAAAAAAgL8AAAAAAAAAwAAAgD4AAADAAACAPgAA8L8AAAAAAADwvwAAgD8AAOi/AAAAAAAA6L8AAAAAAAD4vwAAgD8AAPi/AQCAPgAAgD8AAIA+482MMgAAwD4vvTsyAgDAPgAAgD8AAAAAAABAPgAAgL4AAEA+AACAvgAAgD0AAAAAAACAPQAAAAAAAAAAAAAAAAAAgL8AAIA+AACAvwAAgD4AAAAAAAAAAAAAAAAAAIC+AAAAAAAAgL4AAIC/AAAAAAAAgL8AAAAAAAD4PgAAgD4AAPg+AACAPgAAHD8AAAAAAAAcP///vz4AAFy/AADAPgEAED4AAIA+AQAQPv7/fz4AAFy/AACAvwAAAL4AAAAAAAAAvgAAAAAAAAAAAACAvwAAAAAAAAAAAAAAAAAAgL4AAAAAAACAvgAAAL4AAAAAAAAAvgAAAAAAAAAAAAAAAAAAgL8AAIA+AACAvwAAgD4AAAAAAAAAAAAAAAAAAIC+AAAAAAAAgL4AAIC/AAAAAAAAgL8AAAAAAAAAvgAAgD4AAAC+AACAPgAAAAAAAAAAAAAAAAAAgD8AAAAAAAAAAAAAAAAAAAAAAAAAvgAAgD8AAAC+"),
"format": 34359742487,
"index_count": 180,
"index_data": PackedByteArray("AAABAAIAAAACAAMABAAFAAYABAAGAAcACAAJAAoACAAKAAsADAANAA4ADAAOAA8AEAARABIAEAASABMAFAAVABYAFAAWABcAGAAZABoAGAAaABsAHAAdAB4AHAAeAB8AIAAhACIAIAAiACMAJAAlACYAJAAmACcAKAApACoAKAAqACsALAAtAC4ALAAuAC8AMAAxADIAMAAyADMANAA1ADYANAA2ADcAOAA5ADoAOAA6ADsAPAA9AD4APAA+AD8AQABBAEIAQABCAEMARABFAEYARABGAEcASABJAEoASABKAEsATABNAE4ATABOAE8AUABRAFIAUABSAFMAVABVAFYAVABWAFcAWABZAFoAWABaAFsAXABdAF4AXABeAF8AYABhAGIAYABiAGMAZABlAGYAZABmAGcAaABpAGoAaABqAGsAbABtAG4AbABuAG8AcABxAHIAcAByAHMAdAB1AHYAdAB2AHcA"),
"material": ExtResource("3_xr2ep"),
"name": "world/wood1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 120,
"vertex_data": PackedByteArray("AAAAPwAAID8AAAC+AAAAvwAAID8AAAC+AAAAvwAAIL8AAAC+AAAAPwAAIL8AAAC+AAAAvwAAIL8AAAA+AAAAvwAAIL8AAAC+AAAAvwAAID8AAAC+AAAAvwAAID8AAAA+AAAAvwAAIL8AAAA+AAAAPwAAIL8AAAA+AAAAPwAAIL8AAAC+AAAAvwAAIL8AAAC+AAAAvwAAID8AAAA+AAAAvwAAID8AAAC+AAAAPwAAID8AAAC+AAAAPwAAID8AAAA+AAAAPwAAID8AAAA+AAAAPwAAID8AAAC+AAAAPwAAIL8AAAC+AAAAPwAAIL8AAAA+AAAAPwAAIL8AAAA+AAAAvwAAIL8AAAA+AAAAvwAAID8AAAA+AAAAPwAAID8AAAA+AAAAPwAAYD8AAAC+AAAAvwAAYD8AAAC+AAAAvwAAQD8AAAC+AAAAPwAAQD8AAAC+AAAAvwAAQD8AAAA+AAAAvwAAQD8AAAC+AAAAvwAAYD8AAAC+AAAAvwAAYD8AAAA+AAAAvwAAQD8AAAA+AAAAPwAAQD8AAAA+AAAAPwAAQD8AAAC+AAAAvwAAQD8AAAC+AAAAvwAAYD8AAAA+AAAAvwAAYD8AAAC+AAAAPwAAYD8AAAC+AAAAPwAAYD8AAAA+AAAAPwAAYD8AAAA+AAAAPwAAYD8AAAC+AAAAPwAAQD8AAAC+AAAAPwAAQD8AAAA+AAAAPwAAQD8AAAA+AAAAvwAAQD8AAAA+AAAAvwAAYD8AAAA+AAAAPwAAYD8AAAA+AAAAPwAAgD8AAAC+AAAAvwAAgD8AAAC+AAAAvwAAYD8AAAC+AAAAPwAAYD8AAAC+AAAAvwAAYD8AAAA+AAAAvwAAYD8AAAC+AAAAvwAAgD8AAAC+AAAAvwAAgD8AAAA+AAAAvwAAYD8AAAA+AAAAPwAAYD8AAAA+AAAAPwAAYD8AAAC+AAAAvwAAYD8AAAC+AAAAvwAAgD8AAAA+AAAAvwAAgD8AAAC+AAAAPwAAgD8AAAC+AAAAPwAAgD8AAAA+AAAAPwAAgD8AAAA+AAAAPwAAgD8AAAC+AAAAPwAAYD8AAAC+AAAAPwAAYD8AAAA+AAAAPwAAYD8AAAA+AAAAvwAAYD8AAAA+AAAAvwAAgD8AAAA+AAAAPwAAgD8AAAA+AAAAPwAAIL8AAAC+AAAAvwAAIL8AAAC+AAAAvwAAQL8AAAC+AAAAPwAAQL8AAAC+AAAAvwAAQL8AAAA+AAAAvwAAQL8AAAC+AAAAvwAAIL8AAAC+AAAAvwAAIL8AAAA+AAAAvwAAQL8AAAA+AAAAPwAAQL8AAAA+AAAAPwAAQL8AAAC+AAAAvwAAQL8AAAC+AAAAvwAAIL8AAAA+AAAAvwAAIL8AAAC+AAAAPwAAIL8AAAC+AAAAPwAAIL8AAAA+AAAAPwAAIL8AAAA+AAAAPwAAIL8AAAC+AAAAPwAAQL8AAAC+AAAAPwAAQL8AAAA+AAAAPwAAQL8AAAA+AAAAvwAAQL8AAAA+AAAAvwAAIL8AAAA+AAAAPwAAIL8AAAA+AAAAPwAAYL8AAAC+AAAAvwAAYL8AAAC+AAAAvwAAgL8AAAC+AAAAPwAAgL8AAAC+AAAAvwAAgL8AAAA+AAAAvwAAgL8AAAC+AAAAvwAAYL8AAAC+AAAAvwAAYL8AAAA+AAAAvwAAgL8AAAA+AAAAPwAAgL8AAAA+AAAAPwAAgL8AAAC+AAAAvwAAgL8AAAC+AAAAvwAAYL8AAAA+AAAAvwAAYL8AAAC+AAAAPwAAYL8AAAC+AAAAPwAAYL8AAAA+AAAAPwAAYL8AAAA+AAAAPwAAYL8AAAC+AAAAPwAAgL8AAAC+AAAAPwAAgL8AAAA+AAAAPwAAgL8AAAA+AAAAvwAAgL8AAAA+AAAAvwAAYL8AAAA+AAAAPwAAYL8AAAA+/////wAA/7//////AAD/v/////8AAP+//////wAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//////////3//////////f/////////9///////9//3////+//3//f////7//f/9/////v/9//3////+///////9/AID//////38AgP//////fwCA//////9/AIAAAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//////////3//////////f/////////9///////9//3//fwCA/3//f/9/AID/f/9//38AgP9//3//fwCA/////wAA/7//////AAD/v/////8AAP+//////wAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//////////3//////////f/////////9///////9//3////+//3//f////7//f/9/////v/9//3////+///////9/AID//////38AgP//////fwCA//////9/AIAAAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//////////3//////////f/////////9///////9//3//fwCA/3//f/9/AID/f/9//38AgP9//3//fwCA/////wAA/7//////AAD/v/////8AAP+//////wAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//////////3//////////f/////////9///////9//3////+//3//f////7//f/9/////v/9//3////+/")
}, {
"aabb": AABB(-0.5, -0.875, -0.125, 1, 1.625, 0.25),
"attribute_data": PackedByteArray("AACAvwAA4L8AAAAAAADgvwAAAAAAANC/AACAvwAA0L8AAAAAAADQvwAAgL4AANC/AACAvgAA4L8AAAAAAADgvwAAAAAAAAAAAAAAAAAAgL8AAIA+AACAvwAAgD4AAAAAAAAAAAAAAAAAAIC+AAAAAAAAgL4AAIC/AAAAAAAAgL8AAAAAAADgvwAAgD4AAOC/AACAPgAA0L8AAAAAAADQvwAAgD8AANC/AAAAAAAA0L8AAAAAAADgvwAAgD8AAOC/AACAvwAAgL4AAAAAAACAvgAAAAAAAAC+AACAvwAAAL4AAAAAAAAAvgAAgL4AAAC+AACAvgAAgL4AAAAAAACAvgAAAAAAAAAAAAAAAAAAgL8AAIA+AACAvwAAgD4AAAAAAAAAAAAAAAAAAIC+AAAAAAAAgL4AAIC/AAAAAAAAgL8AAAAAAACAvgAAgD4AAIC+AACAPgAAAL4AAAAAAAAAvgAAgD8AAAC+AAAAAAAAAL4AAAAAAACAvgAAgD8AAIC+"),
"format": 34359742487,
"index_count": 72,
"index_data": PackedByteArray("AAABAAIAAAACAAMABAAFAAYABAAGAAcACAAJAAoACAAKAAsADAANAA4ADAAOAA8AEAARABIAEAASABMAFAAVABYAFAAWABcAGAAZABoAGAAaABsAHAAdAB4AHAAeAB8AIAAhACIAIAAiACMAJAAlACYAJAAmACcAKAApACoAKAAqACsALAAtAC4ALAAuAC8A"),
"material": ExtResource("4_bsxro"),
"name": "world/rivets_h",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray("AAAAPwAAQD8AAAC+AAAAvwAAQD8AAAC+AAAAvwAAID8AAAC+AAAAPwAAID8AAAC+AAAAvwAAID8AAAA+AAAAvwAAID8AAAC+AAAAvwAAQD8AAAC+AAAAvwAAQD8AAAA+AAAAvwAAID8AAAA+AAAAPwAAID8AAAA+AAAAPwAAID8AAAC+AAAAvwAAID8AAAC+AAAAvwAAQD8AAAA+AAAAvwAAQD8AAAC+AAAAPwAAQD8AAAC+AAAAPwAAQD8AAAA+AAAAPwAAQD8AAAA+AAAAPwAAQD8AAAC+AAAAPwAAID8AAAC+AAAAPwAAID8AAAA+AAAAPwAAID8AAAA+AAAAvwAAID8AAAA+AAAAvwAAQD8AAAA+AAAAPwAAQD8AAAA+AAAAPwAAQL8AAAC+AAAAvwAAQL8AAAC+AAAAvwAAYL8AAAC+AAAAPwAAYL8AAAC+AAAAvwAAYL8AAAA+AAAAvwAAYL8AAAC+AAAAvwAAQL8AAAC+AAAAvwAAQL8AAAA+AAAAvwAAYL8AAAA+AAAAPwAAYL8AAAA+AAAAPwAAYL8AAAC+AAAAvwAAYL8AAAC+AAAAvwAAQL8AAAA+AAAAvwAAQL8AAAC+AAAAPwAAQL8AAAC+AAAAPwAAQL8AAAA+AAAAPwAAQL8AAAA+AAAAPwAAQL8AAAC+AAAAPwAAYL8AAAC+AAAAPwAAYL8AAAA+AAAAPwAAYL8AAAA+AAAAvwAAYL8AAAA+AAAAvwAAQL8AAAA+AAAAPwAAQL8AAAA+/////wAA/7//////AAD/v/////8AAP+//////wAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//////////3//////////f/////////9///////9//3////+//3//f////7//f/9/////v/9//3////+//////wAA/7//////AAD/v/////8AAP+//////wAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//////////3//////////f/////////9///////9//3////+//3//f////7//f/9/////v/9//3////+/")
}]

[sub_resource type="ArrayOccluder3D" id="ArrayOccluder3D_msuef"]
vertices = PackedVector3Array(0.5, 0.625, -0.125, -0.5, 0.625, -0.125, -0.5, -0.625, -0.125, 0.5, -0.625, -0.125, -0.5, -0.625, 0.125, -0.5, -0.625, -0.125, -0.5, 0.625, -0.125, -0.5, 0.625, 0.125, -0.5, -0.625, 0.125, 0.5, -0.625, 0.125, 0.5, -0.625, -0.125, -0.5, -0.625, -0.125, -0.5, 0.625, 0.125, -0.5, 0.625, -0.125, 0.5, 0.625, -0.125, 0.5, 0.625, 0.125, 0.5, 0.625, 0.125, 0.5, 0.625, -0.125, 0.5, -0.625, -0.125, 0.5, -0.625, 0.125, 0.5, -0.625, 0.125, -0.5, -0.625, 0.125, -0.5, 0.625, 0.125, 0.5, 0.625, 0.125, 0.5, 0.875, -0.125, -0.5, 0.875, -0.125, -0.5, 0.75, -0.125, 0.5, 0.75, -0.125, -0.5, 0.75, 0.125, -0.5, 0.75, -0.125, -0.5, 0.875, -0.125, -0.5, 0.875, 0.125, -0.5, 0.75, 0.125, 0.5, 0.75, 0.125, 0.5, 0.75, -0.125, -0.5, 0.75, -0.125, -0.5, 0.875, 0.125, -0.5, 0.875, -0.125, 0.5, 0.875, -0.125, 0.5, 0.875, 0.125, 0.5, 0.875, 0.125, 0.5, 0.875, -0.125, 0.5, 0.75, -0.125, 0.5, 0.75, 0.125, 0.5, 0.75, 0.125, -0.5, 0.75, 0.125, -0.5, 0.875, 0.125, 0.5, 0.875, 0.125, 0.5, 1, -0.125, -0.5, 1, -0.125, -0.5, 0.875, -0.125, 0.5, 0.875, -0.125, -0.5, 0.875, 0.125, -0.5, 0.875, -0.125, -0.5, 1, -0.125, -0.5, 1, 0.125, -0.5, 0.875, 0.125, 0.5, 0.875, 0.125, 0.5, 0.875, -0.125, -0.5, 0.875, -0.125, -0.5, 1, 0.125, -0.5, 1, -0.125, 0.5, 1, -0.125, 0.5, 1, 0.125, 0.5, 1, 0.125, 0.5, 1, -0.125, 0.5, 0.875, -0.125, 0.5, 0.875, 0.125, 0.5, 0.875, 0.125, -0.5, 0.875, 0.125, -0.5, 1, 0.125, 0.5, 1, 0.125, 0.5, -0.625, -0.125, -0.5, -0.625, -0.125, -0.5, -0.75, -0.125, 0.5, -0.75, -0.125, -0.5, -0.75, 0.125, -0.5, -0.75, -0.125, -0.5, -0.625, -0.125, -0.5, -0.625, 0.125, -0.5, -0.75, 0.125, 0.5, -0.75, 0.125, 0.5, -0.75, -0.125, -0.5, -0.75, -0.125, -0.5, -0.625, 0.125, -0.5, -0.625, -0.125, 0.5, -0.625, -0.125, 0.5, -0.625, 0.125, 0.5, -0.625, 0.125, 0.5, -0.625, -0.125, 0.5, -0.75, -0.125, 0.5, -0.75, 0.125, 0.5, -0.75, 0.125, -0.5, -0.75, 0.125, -0.5, -0.625, 0.125, 0.5, -0.625, 0.125, 0.5, -0.875, -0.125, -0.5, -0.875, -0.125, -0.5, -1, -0.125, 0.5, -1, -0.125, -0.5, -1, 0.125, -0.5, -1, -0.125, -0.5, -0.875, -0.125, -0.5, -0.875, 0.125, -0.5, -1, 0.125, 0.5, -1, 0.125, 0.5, -1, -0.125, -0.5, -1, -0.125, -0.5, -0.875, 0.125, -0.5, -0.875, -0.125, 0.5, -0.875, -0.125, 0.5, -0.875, 0.125, 0.5, -0.875, 0.125, 0.5, -0.875, -0.125, 0.5, -1, -0.125, 0.5, -1, 0.125, 0.5, -1, 0.125, -0.5, -1, 0.125, -0.5, -0.875, 0.125, 0.5, -0.875, 0.125, 0.5, 0.75, -0.125, -0.5, 0.75, -0.125, -0.5, 0.625, -0.125, 0.5, 0.625, -0.125, -0.5, 0.625, 0.125, -0.5, 0.625, -0.125, -0.5, 0.75, -0.125, -0.5, 0.75, 0.125, -0.5, 0.625, 0.125, 0.5, 0.625, 0.125, 0.5, 0.625, -0.125, -0.5, 0.625, -0.125, -0.5, 0.75, 0.125, -0.5, 0.75, -0.125, 0.5, 0.75, -0.125, 0.5, 0.75, 0.125, 0.5, 0.75, 0.125, 0.5, 0.75, -0.125, 0.5, 0.625, -0.125, 0.5, 0.625, 0.125, 0.5, 0.625, 0.125, -0.5, 0.625, 0.125, -0.5, 0.75, 0.125, 0.5, 0.75, 0.125, 0.5, -0.75, -0.125, -0.5, -0.75, -0.125, -0.5, -0.875, -0.125, 0.5, -0.875, -0.125, -0.5, -0.875, 0.125, -0.5, -0.875, -0.125, -0.5, -0.75, -0.125, -0.5, -0.75, 0.125, -0.5, -0.875, 0.125, 0.5, -0.875, 0.125, 0.5, -0.875, -0.125, -0.5, -0.875, -0.125, -0.5, -0.75, 0.125, -0.5, -0.75, -0.125, 0.5, -0.75, -0.125, 0.5, -0.75, 0.125, 0.5, -0.75, 0.125, 0.5, -0.75, -0.125, 0.5, -0.875, -0.125, 0.5, -0.875, 0.125, 0.5, -0.875, 0.125, -0.5, -0.875, 0.125, -0.5, -0.75, 0.125, 0.5, -0.75, 0.125)
indices = PackedInt32Array(0, 1, 2, 0, 2, 3, 4, 5, 6, 4, 6, 7, 8, 9, 10, 8, 10, 11, 12, 13, 14, 12, 14, 15, 16, 17, 18, 16, 18, 19, 20, 21, 22, 20, 22, 23, 24, 25, 26, 24, 26, 27, 28, 29, 30, 28, 30, 31, 32, 33, 34, 32, 34, 35, 36, 37, 38, 36, 38, 39, 40, 41, 42, 40, 42, 43, 44, 45, 46, 44, 46, 47, 48, 49, 50, 48, 50, 51, 52, 53, 54, 52, 54, 55, 56, 57, 58, 56, 58, 59, 60, 61, 62, 60, 62, 63, 64, 65, 66, 64, 66, 67, 68, 69, 70, 68, 70, 71, 72, 73, 74, 72, 74, 75, 76, 77, 78, 76, 78, 79, 80, 81, 82, 80, 82, 83, 84, 85, 86, 84, 86, 87, 88, 89, 90, 88, 90, 91, 92, 93, 94, 92, 94, 95, 96, 97, 98, 96, 98, 99, 100, 101, 102, 100, 102, 103, 104, 105, 106, 104, 106, 107, 108, 109, 110, 108, 110, 111, 112, 113, 114, 112, 114, 115, 116, 117, 118, 116, 118, 119, 120, 121, 122, 120, 122, 123, 124, 125, 126, 124, 126, 127, 128, 129, 130, 128, 130, 131, 132, 133, 134, 132, 134, 135, 136, 137, 138, 136, 138, 139, 140, 141, 142, 140, 142, 143, 144, 145, 146, 144, 146, 147, 148, 149, 150, 148, 150, 151, 152, 153, 154, 152, 154, 155, 156, 157, 158, 156, 158, 159, 160, 161, 162, 160, 162, 163, 164, 165, 166, 164, 166, 167)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_dwrgd"]
data = PackedVector3Array(0.5, 0.625, -0.125, -0.5, 0.625, -0.125, -0.5, -0.625, -0.125, 0.5, 0.625, -0.125, -0.5, -0.625, -0.125, 0.5, -0.625, -0.125, -0.5, -0.625, 0.125, -0.5, -0.625, -0.125, -0.5, 0.625, -0.125, -0.5, -0.625, 0.125, -0.5, 0.625, -0.125, -0.5, 0.625, 0.125, -0.5, -0.625, 0.125, 0.5, -0.625, 0.125, 0.5, -0.625, -0.125, -0.5, -0.625, 0.125, 0.5, -0.625, -0.125, -0.5, -0.625, -0.125, -0.5, 0.625, 0.125, -0.5, 0.625, -0.125, 0.5, 0.625, -0.125, -0.5, 0.625, 0.125, 0.5, 0.625, -0.125, 0.5, 0.625, 0.125, 0.5, 0.625, 0.125, 0.5, 0.625, -0.125, 0.5, -0.625, -0.125, 0.5, 0.625, 0.125, 0.5, -0.625, -0.125, 0.5, -0.625, 0.125, 0.5, -0.625, 0.125, -0.5, -0.625, 0.125, -0.5, 0.625, 0.125, 0.5, -0.625, 0.125, -0.5, 0.625, 0.125, 0.5, 0.625, 0.125, 0.5, 0.875, -0.125, -0.5, 0.875, -0.125, -0.5, 0.75, -0.125, 0.5, 0.875, -0.125, -0.5, 0.75, -0.125, 0.5, 0.75, -0.125, -0.5, 0.75, 0.125, -0.5, 0.75, -0.125, -0.5, 0.875, -0.125, -0.5, 0.75, 0.125, -0.5, 0.875, -0.125, -0.5, 0.875, 0.125, -0.5, 0.75, 0.125, 0.5, 0.75, 0.125, 0.5, 0.75, -0.125, -0.5, 0.75, 0.125, 0.5, 0.75, -0.125, -0.5, 0.75, -0.125, -0.5, 0.875, 0.125, -0.5, 0.875, -0.125, 0.5, 0.875, -0.125, -0.5, 0.875, 0.125, 0.5, 0.875, -0.125, 0.5, 0.875, 0.125, 0.5, 0.875, 0.125, 0.5, 0.875, -0.125, 0.5, 0.75, -0.125, 0.5, 0.875, 0.125, 0.5, 0.75, -0.125, 0.5, 0.75, 0.125, 0.5, 0.75, 0.125, -0.5, 0.75, 0.125, -0.5, 0.875, 0.125, 0.5, 0.75, 0.125, -0.5, 0.875, 0.125, 0.5, 0.875, 0.125, 0.5, 1, -0.125, -0.5, 1, -0.125, -0.5, 0.875, -0.125, 0.5, 1, -0.125, -0.5, 0.875, -0.125, 0.5, 0.875, -0.125, -0.5, 0.875, 0.125, -0.5, 0.875, -0.125, -0.5, 1, -0.125, -0.5, 0.875, 0.125, -0.5, 1, -0.125, -0.5, 1, 0.125, -0.5, 0.875, 0.125, 0.5, 0.875, 0.125, 0.5, 0.875, -0.125, -0.5, 0.875, 0.125, 0.5, 0.875, -0.125, -0.5, 0.875, -0.125, -0.5, 1, 0.125, -0.5, 1, -0.125, 0.5, 1, -0.125, -0.5, 1, 0.125, 0.5, 1, -0.125, 0.5, 1, 0.125, 0.5, 1, 0.125, 0.5, 1, -0.125, 0.5, 0.875, -0.125, 0.5, 1, 0.125, 0.5, 0.875, -0.125, 0.5, 0.875, 0.125, 0.5, 0.875, 0.125, -0.5, 0.875, 0.125, -0.5, 1, 0.125, 0.5, 0.875, 0.125, -0.5, 1, 0.125, 0.5, 1, 0.125, 0.5, -0.625, -0.125, -0.5, -0.625, -0.125, -0.5, -0.75, -0.125, 0.5, -0.625, -0.125, -0.5, -0.75, -0.125, 0.5, -0.75, -0.125, -0.5, -0.75, 0.125, -0.5, -0.75, -0.125, -0.5, -0.625, -0.125, -0.5, -0.75, 0.125, -0.5, -0.625, -0.125, -0.5, -0.625, 0.125, -0.5, -0.75, 0.125, 0.5, -0.75, 0.125, 0.5, -0.75, -0.125, -0.5, -0.75, 0.125, 0.5, -0.75, -0.125, -0.5, -0.75, -0.125, -0.5, -0.625, 0.125, -0.5, -0.625, -0.125, 0.5, -0.625, -0.125, -0.5, -0.625, 0.125, 0.5, -0.625, -0.125, 0.5, -0.625, 0.125, 0.5, -0.625, 0.125, 0.5, -0.625, -0.125, 0.5, -0.75, -0.125, 0.5, -0.625, 0.125, 0.5, -0.75, -0.125, 0.5, -0.75, 0.125, 0.5, -0.75, 0.125, -0.5, -0.75, 0.125, -0.5, -0.625, 0.125, 0.5, -0.75, 0.125, -0.5, -0.625, 0.125, 0.5, -0.625, 0.125, 0.5, -0.875, -0.125, -0.5, -0.875, -0.125, -0.5, -1, -0.125, 0.5, -0.875, -0.125, -0.5, -1, -0.125, 0.5, -1, -0.125, -0.5, -1, 0.125, -0.5, -1, -0.125, -0.5, -0.875, -0.125, -0.5, -1, 0.125, -0.5, -0.875, -0.125, -0.5, -0.875, 0.125, -0.5, -1, 0.125, 0.5, -1, 0.125, 0.5, -1, -0.125, -0.5, -1, 0.125, 0.5, -1, -0.125, -0.5, -1, -0.125, -0.5, -0.875, 0.125, -0.5, -0.875, -0.125, 0.5, -0.875, -0.125, -0.5, -0.875, 0.125, 0.5, -0.875, -0.125, 0.5, -0.875, 0.125, 0.5, -0.875, 0.125, 0.5, -0.875, -0.125, 0.5, -1, -0.125, 0.5, -0.875, 0.125, 0.5, -1, -0.125, 0.5, -1, 0.125, 0.5, -1, 0.125, -0.5, -1, 0.125, -0.5, -0.875, 0.125, 0.5, -1, 0.125, -0.5, -0.875, 0.125, 0.5, -0.875, 0.125, 0.5, 0.75, -0.125, -0.5, 0.75, -0.125, -0.5, 0.625, -0.125, 0.5, 0.75, -0.125, -0.5, 0.625, -0.125, 0.5, 0.625, -0.125, -0.5, 0.625, 0.125, -0.5, 0.625, -0.125, -0.5, 0.75, -0.125, -0.5, 0.625, 0.125, -0.5, 0.75, -0.125, -0.5, 0.75, 0.125, -0.5, 0.625, 0.125, 0.5, 0.625, 0.125, 0.5, 0.625, -0.125, -0.5, 0.625, 0.125, 0.5, 0.625, -0.125, -0.5, 0.625, -0.125, -0.5, 0.75, 0.125, -0.5, 0.75, -0.125, 0.5, 0.75, -0.125, -0.5, 0.75, 0.125, 0.5, 0.75, -0.125, 0.5, 0.75, 0.125, 0.5, 0.75, 0.125, 0.5, 0.75, -0.125, 0.5, 0.625, -0.125, 0.5, 0.75, 0.125, 0.5, 0.625, -0.125, 0.5, 0.625, 0.125, 0.5, 0.625, 0.125, -0.5, 0.625, 0.125, -0.5, 0.75, 0.125, 0.5, 0.625, 0.125, -0.5, 0.75, 0.125, 0.5, 0.75, 0.125, 0.5, -0.75, -0.125, -0.5, -0.75, -0.125, -0.5, -0.875, -0.125, 0.5, -0.75, -0.125, -0.5, -0.875, -0.125, 0.5, -0.875, -0.125, -0.5, -0.875, 0.125, -0.5, -0.875, -0.125, -0.5, -0.75, -0.125, -0.5, -0.875, 0.125, -0.5, -0.75, -0.125, -0.5, -0.75, 0.125, -0.5, -0.875, 0.125, 0.5, -0.875, 0.125, 0.5, -0.875, -0.125, -0.5, -0.875, 0.125, 0.5, -0.875, -0.125, -0.5, -0.875, -0.125, -0.5, -0.75, 0.125, -0.5, -0.75, -0.125, 0.5, -0.75, -0.125, -0.5, -0.75, 0.125, 0.5, -0.75, -0.125, 0.5, -0.75, 0.125, 0.5, -0.75, 0.125, 0.5, -0.75, -0.125, 0.5, -0.875, -0.125, 0.5, -0.75, 0.125, 0.5, -0.875, -0.125, 0.5, -0.875, 0.125, 0.5, -0.875, 0.125, -0.5, -0.875, 0.125, -0.5, -0.75, 0.125, 0.5, -0.875, 0.125, -0.5, -0.75, 0.125, 0.5, -0.75, 0.125)

[sub_resource type="BoxShape3D" id="BoxShape3D_cg2g4"]
size = Vector3(1, 2, 1)

[node name="LockedDoor" type="Area3D"]
collision_layer = 0
collision_mask = 6
script = ExtResource("1_t2q86")

[node name="RotOffset" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.437, 0, 0)

[node name="Lock" type="MeshInstance3D" parent="RotOffset"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, -0.096, 0.203)
mesh = SubResource("ArrayMesh_t0exp")
skeleton = NodePath("")

[node name="Lock2" type="MeshInstance3D" parent="RotOffset"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, -0.096, -0.203)
mesh = SubResource("ArrayMesh_t0exp")
skeleton = NodePath("")

[node name="Handle" type="MeshInstance3D" parent="RotOffset"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0.125, 0)
mesh = SubResource("ArrayMesh_jeyh0")
skeleton = NodePath("")

[node name="Door" type="StaticBody3D" parent="RotOffset"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.438, 0, 0)
collision_mask = 0

[node name="entity_3_mesh_instance" type="MeshInstance3D" parent="RotOffset/Door"]
mesh = SubResource("ArrayMesh_62h67")

[node name="entity_3_occluder_instance" type="OccluderInstance3D" parent="RotOffset/Door"]
occluder = SubResource("ArrayOccluder3D_msuef")

[node name="entity_3_collision_shape" type="CollisionShape3D" parent="RotOffset/Door"]
shape = SubResource("ConcavePolygonShape3D_dwrgd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_cg2g4")

[connection signal="body_entered" from="." to="." method="onBodyEnter"]
[connection signal="body_exited" from="." to="." method="onBodyExit"]
